--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
-  background-color: #ffff;
+  background-color: #ffffff;
 }
-ul,
-ol {
+
+ul {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
+
 p,
 h1,
 h2,
@@ -16,29 +18,48 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
+
 a {
   text-decoration: none;
 }
+
 img {
   display: block;
 }
-/* standard blok */
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
-  max-width: 1158px;
-  padding: 0 15px;
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
   margin: 0 auto;
 }
-/* header */
-.page-header {
-  border-bottom: 1px solid #e7e9fc;
-}
-.text {
-  font-size: 16px;
-  line-height: 1.5;
+
+.title {
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
 }
+
 .subtitle {
   font-weight: 500;
   font-size: 20px;
@@ -46,19 +67,33 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+
+.text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
 .section {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-.header-container {
+
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header .container {
   display: flex;
   align-items: center;
 }
+
 .header-nav {
   display: flex;
   align-items: center;
 }
-.logo {
+
+.header-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
@@ -66,80 +101,72 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
-}
-.header-logo .logo-part {
-  color: #2e2f42;
-  line-height: 1.17;
-}
-.header-logo {
-  padding: 24px 0;
+  padding-top: 24px;
+  padding-bottom: 24px;
   margin-right: 76px;
 }
-.footer-logo .logo-part {
-  color: #f4f4fd;
-  line-height: 1.17;
+
+.header-logo span {
+  color: #2e2f42;
 }
-.footer-logo {
-  display: inline-block;
-  margin-bottom: 16px;
-}
-.page-footer {
-  background-color: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-.footer-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  max-width: 264px;
-}
-.nav-list {
+
+.header-menu-list {
   display: flex;
-  align-items: center;
   gap: 40px;
 }
-.nav-link {
-  display: block;
-  padding: 24px 0;
+
+.header-menu-item {
+}
+
+.header-menu-link {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
-.nav-link:hover,
-.nav-link:focus,
-.contacts-link:hover,
-.contacts-link:focus {
+
+.header-menu-link:hover,
+.header-menu-link:focus {
   color: #404bbf;
 }
-.contacts {
+
+.header-address {
   font-style: normal;
   margin-left: auto;
 }
-.contacts-list {
+
+.header-address-list {
   display: flex;
-  align-items: center;
   gap: 40px;
 }
-.contacts-link {
+
+.header-address-item {
+}
+
+.header-address-link {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  padding: 24px 0;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
-/* <!--  section 1 --> */
-.title-section {
+
+.header-address-link:hover,
+.header-address-link:focus {
+  color: #404bbf;
+}
+
+.hero {
   background-color: #2e2f42;
   padding-top: 188px;
   padding-bottom: 188px;
 }
-.main-title {
-  font-weight: 700;
+
+.hero-title {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
@@ -149,151 +176,142 @@ img {
   margin: 0 auto;
   margin-bottom: 48px;
 }
-.button-order {
-  cursor: pointer;
+
+.hero-button {
+  min-width: 169px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
   background-color: #4d5ae5;
+  cursor: pointer;
   display: block;
   margin: 0 auto;
   border-radius: 4px;
   padding: 16px 32px;
   border: none;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  min-width: 169px;
 }
-.button-order:hover,
-.button-order:focus {
+
+.hero-btn:hover,
+.hero-btn:focus {
   background-color: #404bbf;
 }
-/* section 2 */
-.features-section {
-  padding: 120px 0;
+
+.features {
 }
+
 .features-list {
   display: flex;
   gap: 24px;
 }
-.feature-item {
+
+.features-item {
   flex-basis: calc((100% - 72px) / 4);
 }
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-.feature-item-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
+
+.features-subtitle {
   margin-bottom: 8px;
 }
-.feature-description {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
+
+.features-text {
 }
-/* section 3 */
-.team-section {
+
+.team {
   background-color: #f4f4fd;
-  padding: 120px 0;
 }
-.team-bottom {
-  padding: 32px 0px;
-}
-.team-section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  text-transform: capitalize;
+
+.team-title {
   margin-bottom: 72px;
 }
+
 .team-list {
-  list-style-type: none;
   display: flex;
   gap: 24px;
 }
 
-.team-card {
+.team-item {
   background-color: #ffffff;
   flex-basis: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
 }
-.team-member-name {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #2e2f42;
-  margin-bottom: 8px;
+
+.team-img {
 }
 
-.team-member-position {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #434455;
+.team-bottom {
+  padding: 32px 0px;
+}
+
+.team-subtitle {
   margin-bottom: 8px;
   text-align: center;
 }
-/* section 4 */
-.portfolio-section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.portfolio-section-title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
+
+.team-text {
   text-align: center;
-  color: #2e2f42;
-  text-transform: capitalize;
+}
+
+.portfolio {
+}
+
+.portfolio-title {
   margin-bottom: 72px;
 }
+
 .portfolio-list {
-  list-style-type: none;
   display: flex;
   flex-wrap: wrap;
   gap: 48px 24px;
 }
-.portfolio-card-title {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
-.portfolio-card-description {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-}
-.portfolio-card {
+
+.portfolio-item {
   flex-basis: calc((100% - 48px) / 3);
 }
+
 .portfolio-bottom {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
+}
+
+.portfolio-img {
+}
+
+.portfolio-subtitle {
+  margin-bottom: 8px;
+}
+
+.portfolio-text {
+}
+
+.footer {
+  background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
+}
+
+.footer-logo span {
+  color: #f4f4fd;
+}
+
+.footer-text {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  max-width: 264px;
 }
