update style file

--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,10 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/);
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  block-size: cover;
 }
 
 .hero-title {
