--- a/css/style.css
+++ b/css/style.css
@@ -234,13 +234,14 @@ img {
   padding: 16px 32px;
   border: none;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
 .hero-button:focus {
   background-color: #404bbf;
 }
-
+/* section-2 */
 .features {
 }
 
@@ -252,14 +253,24 @@ img {
 .features-item {
   flex-basis: calc((100% - 72px) / 4);
 }
-
+.features-wrap {
+  width: 100%;
+  height: 112px;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
+  background-color: #f4f4fd;
+}
 .features-subtitle {
   margin-bottom: 8px;
 }
 
 .features-text {
 }
-
+/* section-3 */
 .team {
   background-color: #f4f4fd;
 }
@@ -277,6 +288,8 @@ img {
   background-color: #ffffff;
   flex-basis: calc((100% - 72px) / 4);
   border-radius: 0 0 4px 4px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-img {
@@ -285,7 +298,32 @@ img {
 .team-bottom {
   padding: 32px 0px;
 }
-
+.team-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.team-social-item {
+  width: 40px;
+  height: 40px;
+}
+.team-social-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.team-social-link:hover,
+.team-social-link:focus {
+  background-color: #404bbf;
+}
+.team-social-icon {
+  fill: #f4f4fd;
+}
 .team-subtitle {
   margin-bottom: 8px;
   text-align: center;
@@ -293,6 +331,7 @@ img {
 
 .team-text {
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .portfolio {
