update css file

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@ img {
     url(../images/people-office.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  block-size: cover;
+  background-size: cover;
 }
 
 .hero-title {
